# IT-Solutions-test-tusk

./: .gitignore  README.md  pyproject.toml  requirements.txt
cash/: admin.py  forms.py  models.py  urls.py
cash/migrations/: 0001_initial.py  0002_alter_cashflow_date.py  0003_alter_cashflow_date.py  0004_alter_cashflow_date.py
config/: settings.py  urls.py
