[tool.poetry]
name = "it-solution-test-tusk"
version = "0.1.0"
description = ""
authors = ["Andreev <151520440+DeadGEEK990@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anyio = "4.9.0"
asgiref = "3.8.1"
babel = "2.17.0"
black = "25.1.0"
build = "1.2.2.post1"
cachecontrol = "0.14.3"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
click = "8.2.1"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
django = "5.2.1"
django-autocomplete-light = "3.12.1"
django-money = "3.5.4"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
keyring = "24.3.1"
more-itertools = "10.7.0"
msgpack = "1.1.0"
mypy-extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
pbs-installer = "2025.5.17"
pexpect = "4.9.0"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
py-moneyed = "3.0"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.13.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
setuptools = "80.9.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlparse = "0.5.3"
tomlkit = "0.13.2"
trove-classifiers = "2025.5.9.12"
typing-extensions = "4.13.2"
tzdata = "2025.2"
urllib3 = "2.4.0"
virtualenv = "20.31.2"
zstandard = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
